--- a/css/style.css
+++ b/css/style.css
@@ -92,10 +92,25 @@ body {
 }
 
 .gradient-text {
-    background: linear-gradient(to right, var(--primary-color),  #7bb9dd ); /* Define the gradient */
+    background: linear-gradient(to right, var(--primary-color),  #7bb9dd, var(--primary-color), #7bb9dd ); /* Define the gradient */
     background-clip: text; /* Clipping the background to the text */
     color: transparent; /* Makes the text itself transparent so the background shows through */
-    animation: ;
+    background-size: 300%;
+    background-position: left;
+    animation: gradient-text 5s infinite;
+}
+
+@keyframes gradient-text {
+    0% {
+        background-position: right;
+    }
+    50% {
+        background-position: left;
+    }
+
+    100% {
+        background-position: right;
+    }
 }
 
 
