--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     --primary-color: #0a6ba9;
     --button-color: #800080;
     --background-color: #030201;
+    --button-hover: #51d6cd;
 }
 
 body {
@@ -21,11 +22,20 @@ body {
     display: flex;
 }
 
-.navigation nav li  {
+.logo div {
+    height: 25px;
+    background-position: center;
+    position: relative;
+    background-color: var(--primary-color);
+    display: inline-block;
+    /* line-height: -1; */
+}
+
+.navigation ul li  {
     list-style: none;
 }
 
-.navigation nav li a {
+.navigation ul li a {
     text-decoration: none;
 }
 
@@ -43,31 +53,75 @@ body {
     font-family: "Playfair Display", serif;
 }
 
-.navigation nav {
+.navigation ul {
     font-size: 24px;
     display: flex;
     justify-content: space-between;
 }
 
-.navigation nav li a {
+.navigation ul li a {
     margin-left: 40px;
     color: white;
+    /* transition: transform 2s; */
 }
 
-.navigation nav li:nth-child(3) a {
+.navigation ul li:nth-child(3) a {
     background-color: var(--primary-color);
     padding: 5px 20px;
-    border-radius: 20px ;
+    border-radius: 20px;
 }
+
+.navigation ul li a:hover {
+    background-color: var(--button-hover);
+    transform: scale(1.2);
+    border-radius: 20px;
+    color: black;
+}
+
+.navigation ul li:hover {
+    /* background-color: var(--button-hover); */
+    transform: scale(1.2);
+    border-radius: 20px;
+    transition: all 0.4s;
+}
+
+.navigation ul a {
+    padding: 5px 20px;
+}
+
+
+
+
 /* header finished */
 
-.main-image img {
+.image-container {
     width: 100%;
     border-radius: 20px;
     box-shadow:  20px 20px 50px rgba(255, 255, 255, 0.089), -20px -20px 50px rgba(255, 255, 255, 0.089);
+    overflow: hidden;
 }
 
-.main-image {
+.image-container img {
+    width: 100%;
+    border-radius: 20px;
+}
+
+.image-container img {
+    animation: zoom-in-out 50s infinite ;
+}
+
+@keyframes zoom-in-out {
+    0% {
+        scale: 1;
+    }
+
+    100% {
+        scale: 1.3;
+    }
+
+}
+
+.heading-banner {
     position: relative;
 }
 
@@ -113,8 +167,51 @@ body {
     }
 }
 
+.section-2 h2 {
+    font-size: 24px ;
+    font-weight: bold;
+    margin: 30px 0px;
+}
 
+.locals-container {
+    display: flex;
+}
 
+.card {
+    /* width: 1fr; */
+}
+
+.card img {
+    width: 100%;
+    /* without width 100% the pictures are taking a lot of space going beyond the div width */
+}
+.card h3 {
+    font-size: 24px;
+    font-weight:bold;
+    margin: 30px 0px;
+}
+.card button {
+    background-color: var(--button-color);
+    padding: 5px 20px;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    font-size: 24px;
+    color: white;
+    border: 1px;
+    cursor: pointer;  
+}
+
+.card button:hover {
+    background-color: var(--button-hover);
+    transform: scale(1.2);
+    border-radius: 20px;
+    color: black;
+    transition: all 0.4s;
+}
+
+.mars-card button {
+    background-color: var(--primary-color);
+}
 
 
 
