media quaries added

--- a/css/style.css
+++ b/css/style.css
@@ -23,12 +23,20 @@ body {
 }
 
 .logo div {
-    height: 25px;
-    background-position: center;
-    position: relative;
+    height: 14px;
+    /* background-position: center; */
+    /* position: relative; */
+    /* background-color: var(--primary-color); */
+    /* display: inline-block; */
+    /* line-height: 0; */
+}
+
+.logo-strip {
     background-color: var(--primary-color);
-    display: inline-block;
-    /* line-height: -1; */
+    line-height: 0;
+    /* position: absolute; */
+    height: 25px;
+    padding-bottom: 0px;
 }
 
 .navigation ul li  {
@@ -44,6 +52,32 @@ body {
     justify-content: space-between;
     margin: 40px 0px;
     align-items: center;
+}
+
+@media screen and (max-width: 900px) {
+    .header-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .logo {
+        margin: 40px 0px;
+    }
+
+    .logo div {
+        /* display: inline-block; */
+    }
+
+    .logo div {
+        height: 14px;}
+
+    .logo-strip {
+        background-color: var(--primary-color);
+        line-height: 0;
+        /* position: absolute; */
+        height: 25px;
+        padding-bottom: 0px;
+    }
 }
 
 .logo a {
