--- a/css/style.css
+++ b/css/style.css
@@ -54,32 +54,6 @@ body {
     align-items: center;
 }
 
-@media screen and (max-width: 900px) {
-    .header-container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-    .logo {
-        margin: 40px 0px;
-    }
-
-    .logo div {
-        /* display: inline-block; */
-    }
-
-    .logo div {
-        height: 14px;}
-
-    .logo-strip {
-        background-color: var(--primary-color);
-        line-height: 0;
-        /* position: absolute; */
-        height: 25px;
-        padding-bottom: 0px;
-    }
-}
-
 .logo a {
     color: white ;
     text-decoration: none;
@@ -93,6 +67,7 @@ body {
     justify-content: space-between;
 }
 
+
 .navigation ul li a {
     margin-left: 40px;
     color: white;
@@ -101,7 +76,7 @@ body {
 
 .navigation ul li:nth-child(3) a {
     background-color: var(--primary-color);
-    padding: 5px 20px;
+    padding: 5px 10px;
     border-radius: 20px;
 }
 
@@ -120,7 +95,7 @@ body {
 }
 
 .navigation ul a {
-    padding: 5px 20px;
+    padding: 5px 10px;
 }
 
 
@@ -137,11 +112,13 @@ body {
 
 .image-container img {
     width: 100%;
-    border-radius: 20px;
+    height: auto;
+    display: block;
+    /* border-radius: 20px; */
 }
 
 .image-container img {
-    animation: zoom-in-out 50s infinite ;
+    animation: zoom-in-out 20s infinite alternate;
 }
 
 @keyframes zoom-in-out {
@@ -150,7 +127,7 @@ body {
     }
 
     100% {
-        scale: 1.3;
+        scale: 1.5;
     }
 
 }
@@ -185,7 +162,7 @@ body {
     color: transparent; /* Makes the text itself transparent so the background shows through */
     background-size: 300%;
     background-position: left;
-    animation: gradient-text 5s infinite;
+    animation: gradient-text 5s infinite alternate;
 }
 
 @keyframes gradient-text {
@@ -211,10 +188,6 @@ body {
     display: flex;
 }
 
-.card {
-    
-}
-
 .card img {
     width: 100%;
     /* without width 100% the pictures are taking a lot of space going beyond the div width */
@@ -228,18 +201,21 @@ body {
 }
 .card button {
     background-color: var(--button-color);
-    padding: 5px 20px;
+    padding: 5px 10px;
     margin-bottom: 70px;
-    margin-left: 20px;
+    display: flex;
+    justify-self: center;
+    /* margin-left: 50px; */
+    /* margin: 0 auto; */
     border-radius: 20px;
-    font-size: 24px;
+    font-size: 16px;
     color: white;
     border: 1px;
     cursor: pointer;  
-
     /* display: flex;
     justify-content: center; */
 }
+
 
 .card button:hover {
     background-color: var(--button-hover);
@@ -262,6 +238,212 @@ footer p {
     margin: 50px 0px;
 }
 
-hr {
+main {
+    border-bottom: rgba(255, 255, 255, 0.13) 1px solid;
+}
+
+/* hr {
     color: black;
+} */
+
+@media screen and (max-width: 900px) {
+    .container{
+        width: 100%;
+    }
+    .header-container {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .logo {
+        margin: 40px 0px;
+    }
+
+    .logo div a {
+        display: inline-block;
+    }
+
+    .logo div {
+        height: 14px;}
+
+    .logo-strip {
+        background-color: var(--primary-color);
+        line-height: 0;
+        /* position: absolute; */
+        height: 25px;
+        padding-bottom: 0px;
+    }
+    .navigation ul {
+        font-size: 20px;
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .navigation ul li a {
+        margin-left: 20px;
+        color: white;
+        /* transition: transform 2s; */
+    }
+
+    .navigation ul li a:hover {
+        background-color: var(--button-hover);
+        transform: scale(1.2);
+        border-radius: 20px;
+        color: black;
+    }
+    
+    .navigation ul li:hover {
+        /* background-color: var(--button-hover); */
+        transform: scale(1.2);
+        border-radius: 20px;
+        transition: all 0.4s;
+    }
+    .image-container, img{
+        border-radius: 0px;
+    }
+
+    .header-text p {
+        font-size: 12px;
+        margin: 20px 0px;
+    }
+    
+    .header-text h1 {
+        font-size: 24px;
+        font-weight: bolder;
+    }
+    .section-2 h2 {
+      display: flex;
+      justify-content: center;
+    }
+    .earth-card button {
+        background-color: var(--primary-color);
+    }
+    .venus-card button {
+        background-color: var(--primary-color); 
+    }
+
+    .mars-card button {
+        background-color: var(--button-color);
+    }
+
+    .card button {
+        font-size: 18px;
+        display: flex;
+        justify-self: center;
+        /* width: 100%; */
+    }
+    .locals-container {
+        display: grid;
+        grid-template-columns:1fr 1fr 1fr ;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .logo {
+        margin-top: 0px;
+        margin-bottom: 25px;
+    }
+
+    /* .image-container {
+        height: 400px;
+    } */
+
+    .header-container {
+        margin-bottom: 20px;
+    }
+    .header-text {
+        margin: 0px 40px;
+        line-height: 40px;
+
+        /* left: 0px; */
+    }
+    
+    
+    .header-text p {
+        font-size: 12px;
+        margin: 20px 0px;
+    }
+    
+    .header-text h1 {
+        font-size: 34px;
+        font-weight: normal;
+    }
+
+    /* .header-text h1 {
+        font-size: 22px;
+    }
+
+    .header-text p {
+        font-size: 12px;
+    } */
+    
+    .header-text p, h1 {
+        /* width: 60%; */
+        margin: 0 auto;
+        text-align: center;
+    }
+
+    .heading-banner {
+        display: flex;
+        justify-content: center;
+    }
+
+    .gradient-text {
+    font-weight: bolder;
+    }
+
+    .header-text > p {
+        line-height: 20px ;
+    }
+    
+    .locals-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .locals-container .card {
+        width: 70%;
+        margin: 0 auto;
+    }
+    /* hiii */
+    .navigation ul {
+        font-size: 14px;
+        display: flex;
+        justify-content: space-around;
+    }
+    
+    .navigation ul li a {
+        margin-left: 0px;
+        color: white;
+        /* transition: transform 2s; */
+    }
+
+    .navigation ul li  {
+            padding: 5px 10px;  
+    }  jjjjjjj
+
+    .navigation ul li a  {
+        padding: 5px 5px;  
+}
+
+    .navigation ul li:hover {
+        /* background-color: var(--button-hover); */
+        transform: scale(1.1);
+        /* border-radius: 20px; */
+        transition: all 0.4s;
+    }
+    /* hiii */
+
+    .card h3 {
+        font-size: 18px;
+    }
+
+    footer p {
+        font-size: 16px;
+        font-weight: bold;
+        display: flex;
+        justify-content: center;
+        margin: 50px 0px;
+    }
 }
