--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,15 @@ body {
 .navigation ul li a {
     margin-left: 40px;
     color: white;
+    border-radius: 20px;
     /* transition: transform 2s; */
+}
+
+.navigation ul li a:active {
+    outline: 3px solid red;
+}
+.navigation ul li a:focus{
+    outline: 3px solid red;
 }
 
 .navigation ul li:nth-child(3) a {
@@ -96,6 +104,13 @@ body {
 
 .navigation ul a {
     padding: 5px 10px;
+}
+
+.navigation ul li a:active {
+    outline: 5px solid red;
+}
+.navigation ul li a:focus{
+    outline: 5px solid red;
 }
 
 
@@ -189,8 +204,10 @@ body {
 }
 
 .card img {
-    width: 100%;
-    /* without width 100% the pictures are taking a lot of space going beyond the div width */
+    width: 90%;
+    display: flex;
+    justify-self: center;
+    /* without width 90% the pictures are taking a lot of space going beyond the div width */
 }
 .card h3 {
     font-size: 24px;
@@ -217,12 +234,25 @@ body {
 }
 
 
+.card:hover img {
+    scale: 1.2;
+    transition: 0.5s ease ;
+}
+
+
 .card button:hover {
     background-color: var(--button-hover);
     transform: scale(1.2);
     border-radius: 20px;
     color: black;
     transition: all 0.4s;
+}
+
+.card button:active {
+    outline: 5px solid red;
+}
+.card button:focus{
+    outline: 5px solid red;
 }
 
 .mars-card button {
