--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,31 @@
     --button-hover: #51d6cd;
 }
 
+.skip-link {
+    position: absolute;
+    top: -100px; /* Keeps it off-screen initially */
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #000;
+    color: #fff;
+    padding: 10px 15px;
+    font-size: 16px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 0px 0px 20px 20px;
+    transition: top 0.3s ease, opacity 0.3s ease;
+    opacity: 0; /* Hidden initially */
+    z-index: 100; /* Ensures it’s above other content */
+}
+
+.skip-link:focus {
+    top: 0px; /* Adjust this based on how high i want it centered */
+    opacity: 1; /* Make it visible */
+    color: black;
+    background-color: white;
+    outline: red 5px solid;
+}
+
 body {
     color: rgb(255, 255, 255);
     font-family: "Lato", sans-serif;
@@ -22,22 +47,31 @@ body {
     display: flex;
 }
 
-.logo div {
+.logo-stripe {
+    position: relative;
+}
+
+.logo-stripe:after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 17px;
+    right: 0;
+    bottom: 12px;
+    background: var(--primary-color);
+    z-index: -1;
+}
+
+/* .logo div {
     height: 14px;
-    /* background-position: center; */
-    /* position: relative; */
-    /* background-color: var(--primary-color); */
-    /* display: inline-block; */
-    /* line-height: 0; */
 }
 
 .logo-strip {
     background-color: var(--primary-color);
     line-height: 0;
-    /* position: absolute; */
     height: 25px;
     padding-bottom: 0px;
-}
+} */
 
 .navigation ul li  {
     list-style: none;
@@ -73,13 +107,6 @@ body {
     color: white;
     border-radius: 20px;
     /* transition: transform 2s; */
-}
-
-.navigation ul li a:active {
-    outline: 3px solid red;
-}
-.navigation ul li a:focus{
-    outline: 3px solid red;
 }
 
 .navigation ul li:nth-child(3) a {
